Comments out contact form

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@ layout: default
 {% include projects.html %}
 {% include testimonials.html %}
 {% include team.html %}
-{% include contact.html %}
 
 {% comment %}
+These sections are commented out:
+{% include contact.html %}
 {% include about.html %}
 {% include clients.html %}
 {% endcomment %}
